--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
                          <div>
                               <h3>Website Updates</h3>
                               <p> 
+                                   <strong>3/5/2023: </strong> I filled out my first section of the <a href="investing/fintech.html">Fintech</a> page
+                                   with a overview of mobile wallets.
+                              </p>
+                              <p> 
                                    <strong>3/3/2023: </strong> I continue to build out the Investing Section by adding a new menu 
                                    and new topics like a Perspective, Top 10 Ideas and Fintech section.
                               </p>
