--- a/innovation/innovation.html
+++ b/innovation/innovation.html
@@ -359,7 +359,7 @@
                          tumor in each person can have vastly different genetic mutations. Targeted therapies like Kinase 
                          inhibitors target the specific mutations in a cell that drive the uncontrolled growth. Many of these 
                          mutations occur in the many signaling pathways inside a cell that regulate cell behavior. When one of 
-                         them gets mutated the balance between grow and don’t grow signals gets thrown out of balance. This 
+                         them gets mutated the balance between grow and don't grow signals gets thrown out of balance. This 
                          drives cancer growth. Inside these cellular pathways are things called a kinase. They are proteins that 
                          act like an on switch. When it is activated, it will perform some kind of signaling action. When the DNA 
                          that encodes these kinase proteins mutates, they can become hyperactive and drive cancer growth. A 
