--- a/investing/fintech.html
+++ b/investing/fintech.html
@@ -81,13 +81,117 @@
 
                <div class="container">
 
-                    Comming Soon
+                    <h2 class="section-title">Fintech</h2>
 
-                    <div class="container">
+                    <section>
+                         <p> 
+                              I have gone through a few Fintech courses. They all go over all the technologies and how they 
+                              work in the space of finance. These are things like electronic payments, moblie wallets, online 
+                              banking, online investing, robo advisors and cryptocurrencies. I want to cover this topic not by 
+                              going over endless amounts of technology that really doesn't help. I want to cover the applications
+                              and services that work in these area and how they can help you. I am sure most of us have use the traditional 
+                              banking system. We all have a local bank with a checking account. Maybe even a savings accout. We probably 
+                              have a debit card and even a credit card. Most of us probably access those services by online applications.
+                              We have used financial technology to some point. Here I just want to cover some of the services people might 
+                              not be aware of that could help them in their journey of personal finance and investing. 
+                         </p>  
+                    </section>
+                    
+                    <ul  class="investor-link">
+                         <li>
+                              <a href="#mobilewallets">Mobile Wallets</a>
+                         </li>
+                         <li>
+                              <a href="#mobilebanking">Mobile Banking</a>
+                         </li>
+                         <li>
+                              <a href="#mobileinvesting">Mobile Investing</a>
+                         </li>
+                         <li>
+                              <a href="#roboadvisors">Robo Advisors</a>
+                         </li>
+                         <li>
+                              <a href="#peertopeer">Peer to Peer Lending</a>
+                         </li>
+                         <li>
+                              <a href="#blockchain">Blockchain</a>
+                         </li>
+                         <li>
+                              <a href="#crypto">Crypto Currencies</a>
+                         </li>
+                    </ul>
+
+                    <section>
+                         <h2 class="section-title" id="mobilewallets">Mobile Wallets</h2>
+                         <p> 
+                              Mobile Wallets are a digital form of the traditional wallet where you would put your paper currencies. Digital 
+                              wallets can offer many new applications. You can use them to pay for things online, you can use them to pay you 
+                              friends or family. Many of these digital wallet services offer more applications than just a wallet. I am going to 
+                              cover Paypal, Cash App and Venmo under this category. You typically set up these accounts online and/or on a phone.
+                              Some of them allow you to use them in both devices. You set up the accounts and link them to a bank account through 
+                              the Automatied Clearning House &#40;ACH&#41; system using a service like Plaid. Paypal lets you link credit cards to your account to use 
+                              for payment methods for online shopping. Once linked to a bank account, you can deposit money into and out of these 
+                              applications. You can also set up a direct deposit to these types of applications. I don't think I ever would as they 
+                              are too limited in function compared to online banking, but that is up to each user. You can use all 
+                              these applications to send money to and from friends. The one thing you can't do with 
+                              them is use them as a bank for other application. You can't link them through ACH to your Binance or Robinhood account. 
+                              You can get a debit card with these applications which can allow you to use them at a store or online to make purchases.
+                              Here I will look deeper at each of these applications and their pros and cons.
+                         </p>  
+                         <p>
+                              Paypal is the oldest of the mobile wallets applications. It has been around since 1998. I have personally used it 
+                              for over a decade so it gets my higest level of trust. I love that they allow you to link a bank account and credit 
+                              card. You can use it for checkout on many online websites. I probably have at least 10 monthly subscriptions paid 
+                              through Paypal. I love that only 1 company gets all my credit card info. Then I just choose checkout with Paypal at
+                              any website. They offer a debit card and a credit card if you chose to apply for them. They offer a savings program
+                              through their application that works like a savings account. It tends to have a higer interest rate that the national
+                              average. You can use it to send and recieve money with friends and family. It even offers some crypto currencies you can 
+                              buy and hold. They offer Bitcoin, Ethereum, Litecoin and Bitcoin Cash. You can use the debit or credit 
+                              card at any physical stores or shops to make payments. I find it very useful
+                              and it is the one application I actually use. They don't offer any checking accounts which is similar to all mobile 
+                              wallet applications. 
+                         </p>
+                         <p>
+                              Cash App is one that I use with friends and family to send money back and forth. I personally would not use it if it were not 
+                              for them. I see a ton of risk in this application with the amount of scammers on social media with this application. 
+                              They had some functions I liked, but there are other services I found that could offer all the same things but without the 
+                              risk. I think it works if you make sure you only use it with people you know and trust. 
+                              It offers a cash account where you can link your bank account. You can deposit money and use it with a debit card. You have 
+                              to apply for their debit card if you want one. This offers you the ability to put in money and send it to friends or family. 
+                              You can use the debit card for making purchases online and in stores. They offer a savings account with a good interest 
+                              rate. I never seen any checkout with Cash App options on any website. The only cryptocurrency they offer is Bitcoin. They 
+                              do offer buying stocks, but they are limited with the companies they offer. I only found about half of the companies I follow 
+                              on their application. They don't offer a credit card like Paypal. I found it had a little bit of everything, but not enough of 
+                              the specific things to warrant use. There are better apps for mobile wallets. There are better apps for cryptocurrencies. There 
+                              are better apps for mobile investing. 
+                         </p>
+                         <p>
+                              Venmo offers a social media component to is application. This allows you to import friends and family to send 
+                              money back and forth. You can post your spending and sending money along with cool emojis. You can link your 
+                              bank account to Venmo through the ACH network and make deposits. They also
+                              offer you a debt card if you apply for it. This will allow you to use it online and in stores to make purchases. 
+                              They don't offer a credit card. Only Paypal offered the option for 
+                              getting a credit card of the 3 mobile wallet applications.  I did not see a savings account option with them. They do offer some 
+                              cryptocurrencies with Bitcoin, Ethereum, Litecoin and Bitcoin Cash. I haven't seen any online sites yet that offer a 
+                              Venmo checkout. I know they are now owned by Paypal, but I can't find any reason to use this over Paypal itself. 
+                         </p>
+                         <p>
+                              This is just my review of the moblie wallets applications. If you already use an online banking or investing app, you 
+                              may find you don't have any need for these types of applications. Most people seem to use them amoung close friends and 
+                              family of people they trust. Personally, Paypal is the only one I actually find a use for as I can deposit money into 
+                              Paypal and use it like a savings account for things I want to buy like a new laptop. Once I have enough cash in there, I 
+                              can use the debit card to make my purchase. I also use a linked credit card to do the vast majority of my online 
+                              shopping. If you use Apple Pay or Google pay, you probably don't need these applications unless you are sending money 
+                              to friends and family. 
+                         </p>
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <div>
                          <a href="investing.html">Back to Investing</a>
                     </div>
 
-                    <p class="container">&#42; I am not a Financial Advisor. This is just My Perspetive. Please refer to your financial advisor before making any investing decisions.</p>
+                    <p>&#42; I am not a Financial Advisor. This is just My Perspetive. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
           </main>
 
