--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                          <div>
                               <h3>Recent News</h3>
                               <p>
+                                   <strong>3/6/2023: </strong> I bought my <a href="investing/portfolio.html"> starter positions</a> is all my 20 stocks I selected for my 
+                                   Robinhood portfolio. I picked them up today near the low. 
+                              </p>
+                              <p>
                                    <strong>3/3/2023: </strong> Moved the Cash I took from Merrill to Robinhood to find that account.
                                    As soon as we have a good biotech down day, I plan to start my core positions in each of the stocks
                                    I picked. 
@@ -125,14 +129,7 @@
                                    <strong>2/10/2023: </strong> I added to my <a href="companies/beam.html">BEAM</a> position today
                                    to bring it up to 5.22% position.
                               </p>
-                              <p>
-                                   <strong>2/17/2023: </strong> I sold the last of my CDXS position as I lost faith in that company. I 
-                                   took my losses over the past 2 years on this one. Now I can put that cash into something that might 
-                                   make money istead of just losing me money.
-                              </p>
-                              <p>
-                                   <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in <a href="companies/crispr.html">CRSP</a>.
-                              </p>
+
                          </div>
                     </section>
 
@@ -158,19 +155,6 @@
                               <p> 
                                    <strong>3/3/2023: </strong> Started with some new styling on the website. So far, I got the Innovation 
                                    Page done. This is part of making it look better.
-                              </p>
-                              <p> 
-                                   <strong>3/3/2023: </strong> Be the first to check out our new <a href="innovation/innovation.html">Innovation Page.</a> 
-                                   I haven't had time to proofread it yet so feel free to let me know if you find any typos.
-                              </p>
-                              <p> 
-                                   <strong>3/2/2023: </strong> Added a new Robinhood Biotech Portfolio to the Portfolio section. My plan 
-                                   is to fade out of my old broker when market recovery and spread out the cash across a few other apps like 
-                                   Robinhood for biotech and Cash App for tech.  
-                              </p>
-                              <p> 
-                                   <strong>3/2/2023: </strong> I updated the profile for <a href="companies/verve.html">VERV</a>
-                                   as far as I can without the 10K. 
                               </p>
                               
                          </div>
