--- a/index.html
+++ b/index.html
@@ -137,6 +137,10 @@
                          <div>
                               <h3>Website Updates</h3>
                               <p> 
+                                   <strong>3/5/2023: </strong> I filled out my second section of the <a href="investing/fintech.html">Fintech</a> page
+                                   with a overview of mobile banking apps.
+                              </p>
+                              <p> 
                                    <strong>3/5/2023: </strong> I filled out my first section of the <a href="investing/fintech.html">Fintech</a> page
                                    with a overview of mobile wallets.
                               </p>
@@ -152,11 +156,7 @@
                                    <strong>3/3/2023: </strong> Added some new styling to the Companies Page. I added the last updated date to the 
                                    main page for quick reference.
                               </p>
-                              <p> 
-                                   <strong>3/3/2023: </strong> Started with some new styling on the website. So far, I got the Innovation 
-                                   Page done. This is part of making it look better.
-                              </p>
-                              
+                             
                          </div>
                     </section>
                </div>
