--- a/investing/fintech.html
+++ b/investing/fintech.html
@@ -187,6 +187,53 @@
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
+                    <section>
+                         <h2 class="section-title" id="mobilebanking">Mobile Banking</h2>
+                         <p> 
+                              Most of us probably use mobile banking already. We probably have a bank with an online banking app that 
+                              allows us to do most of our banking needs right on our cell phone. We all have a brick and mortar bank which 
+                              is probably located near where we live and we use a combination of in bank and online services. What does fintech 
+                              have to offer in the space of banking that might be of interest to us? Some banks save cost by not having 
+                              brick and mortar banks. They exist only online. They use partner banks to store deposits for customers so they 
+                              are FDIC insured. They have no employees since they exist only online. This allows them to offer some very attractive 
+                              rates for customers along with many other services that some normal banks might now offer. They can offer higher 
+                              interest on accounts along with things like crypto and stock investing. Some of them are designed well to work 
+                              with other online applications for payments and investing which make them very convenient. 
+                         </p>  
+                         <p>
+                              The first one here is Sofi. They offer all the standard banking options with checking and savings accounts. You 
+                              can even order a paper checkbook if you want one. They have a debit card you can link to the checking account. They 
+                              offer a credit card and other loans and banking services. They even offer investing with crypto and stocks. 
+                              They pretty much cover everything you would want from a bank. They allow direct deposit if you want to use them
+                              as your primary bank. They have both a website and phone app for the best of both uses. I use both of these services.
+                              They have tools built in for tracking spending and helping with budgeting. They even offer your FICO credit score 
+                              from one of the major rating agencies. I haven't been using them long, but I 
+                              haven't found anything I dislike about them. They seem to have it all, and it is in a very nice and easy to use 
+                              application. The one drawback is they are only located in the US. 
+                         </p>
+                         <p>
+                              Chime is the other great alternative. They offer all the same services with a checking and savings account. 
+                              They offer both a debit and credit card. They have a credit builder option that is designed to help build your credit 
+                              score. They have a credit score tracker which I think uses the Advantage score. They offer the bonus of being international
+                              for those who might want to use them outside the US. The one thing they lack is the investing part of the application. If 
+                              you are not looking to invest or buy crypto, this is a very attractive online banking option. Some of their banking 
+                              services are nicer than Sofi, but they are more focused strictly on banking. The one thing I disliked about Chime is it 
+                              tends to have a lot of limits on functions like daily deposits or withdrawals. That kind of makes it too limited for me 
+                              personally. 
+                         </p>
+                         <p>
+                              The system I use to maximize online banks is to use it like a gateway to the digital financial life. I have a local bank 
+                              where I have my checking with a paper checkbook in case I should need it. I have my Emergency savings account with them 
+                              in case I have an emergency. I linked that account to my Sofi account. I push all my money from there to Sofi where I use it 
+                              to spend and invest online with other online applications. It acts like a firewall so that no one knows or can access my 
+                              local bank account. It is only linked to Sofi. If you are doing banking and investing online, looking at one of these 
+                              Fintech banks could help boost your interest that you get over a standard account as many of these checking and savings accounts 
+                              pay high interest rates compared to normal banks.
+                         </p>
+                        
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
                     <div>
                          <a href="investing.html">Back to Investing</a>
                     </div>
