--- a/investing/fintech.html
+++ b/investing/fintech.html
@@ -196,14 +196,14 @@
                               have to offer in the space of banking that might be of interest to us? Some banks save cost by not having 
                               brick and mortar banks. They exist only online. They use partner banks to store deposits for customers so they 
                               are FDIC insured. They have no employees since they exist only online. This allows them to offer some very attractive 
-                              rates for customers along with many other services that some normal banks might now offer. They can offer higher 
+                              rates for customers along with many other services that some normal banks might not offer. They can offer higher 
                               interest on accounts along with things like crypto and stock investing. Some of them are designed well to work 
                               with other online applications for payments and investing which make them very convenient. 
                          </p>  
                          <p>
                               The first one here is Sofi. They offer all the standard banking options with checking and savings accounts. You 
                               can even order a paper checkbook if you want one. They have a debit card you can link to the checking account. They 
-                              offer a credit card and other loans and banking services. They even offer investing with crypto and stocks. 
+                              offer a credit card, loans and banking services. They even offer investing with crypto and stocks. 
                               They pretty much cover everything you would want from a bank. They allow direct deposit if you want to use them
                               as your primary bank. They have both a website and phone app for the best of both uses. I use both of these services.
                               They have tools built in for tracking spending and helping with budgeting. They even offer your FICO credit score 
@@ -227,8 +227,62 @@
                               in case I have an emergency. I linked that account to my Sofi account. I push all my money from there to Sofi where I use it 
                               to spend and invest online with other online applications. It acts like a firewall so that no one knows or can access my 
                               local bank account. It is only linked to Sofi. If you are doing banking and investing online, looking at one of these 
-                              Fintech banks could help boost your interest that you get over a standard account as many of these checking and savings accounts 
+                              Fintech banks could help boost your interest rates that you get over a standard account as many of these checking and savings accounts 
                               pay high interest rates compared to normal banks.
+                         </p>
+                        
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <section>
+                         <h2 class="section-title" id="mobileinvesting">Mobile Investing</h2>
+                         <p> 
+                              When it comes to investing online, I happen to be one of the first. I started investing in 1996 with a small company 
+                              called Suretrade which then bought out by a bigger company which was eventually bought out by a bigger company which 
+                              ended up with Merrill Lynch. I have been with them ever since. As I see all these new trading applications come out with 
+                              newer technology, I feel jealous. I have been with my online broker for 25 years, and they don't offer many of the cool 
+                              options like no balance limits, fractional shares or an easy to use application with crypto investing added on. Recently, 
+                              I decided to make the move. I started investing with some of these newer investing applications. The biggest issue I have 
+                              right now is trust. Some of them are very new, and I don't really trust them yet with any serious amount of money. If you 
+                              are a new investor just getting started, I would certainly recommend them as I love so much more than the old brokers 
+                              that offer outdated services. My recommendation is to spread it around like any risk management portfolio. I opted to put 
+                              my money across several platform to ensure the loss of one would not dramatically impact me. 
+                         </p>  
+                         <p>
+                              The first one here will be Sofi as they have crypto investing and stock investing built into their application along 
+                              with banking. You can quickly move money between these accounts which makes it very easy to use. They offer buying fractional 
+                              shares. I didn't see a huge amount of analytic tools. If you day trader who needs charts, this probably isn't 
+                              going to be for you. If you are an investor looking to contribute every payday into an investing account, this is a very good 
+                              option. They offer a range of retirement accounts from a 401k to an IRA. I think it would be a great place to park some of your 
+                              investing money. I opted to put my Technology portfolio with them as I test out and learn the system. If I run into any 
+                              issues or benefits I missed, I will come back and update this section.
+                         </p>
+                         <p>
+                              The next option is Robinhood. I know they took a lot of bad press over the meme stocks from the pandemic bubble and 
+                              some of the actions they took by halting some stocks. I tested out their platform with my new biotech portfolio. I love 
+                              everything about it so far. It is a very simple and clean interface for new investors to get started. Again, if you are 
+                              looking to be a daytrader and need advanced charts, you would probably have to do that with another application. 
+                              They offer fractional shares. I did a wave of buying with my deposited cash and found it very easy to use. The notifications 
+                              kept track of every trade so I could go back and look at how many shares and at what price I was able to buy. Helps me 
+                              record my cost basis. I found that very useful. I think they even offer more cryptos for investing than some of the other 
+                              applications up to this point. You can buy some of the more speculative coins on Robinhood. They offer an IRA with matching. 
+                              I never tested it out, but I do have an IRA. I could move there later once I trust them more with my money.
+                         </p>
+                         <p>
+                              Webull is a very popular app among traders as it offers all kinds of charts and options trading. I found it way too 
+                              complicated for the average investor who just wants to buy and own stocks. When I found out it was Chinese owned, I 
+                              stopped right there and moved on. With all the crackdown on TicTok and the risk of giving personal information to 
+                              foreign entities, that was just too much risk for me. I gave it a pass. 
+                         </p>
+                         <p>
+                              M1 finance is a different type of investing app. This allows you to design a portfolio where you build a pie chart by 
+                              selecting the stocks or ETFs you want in your portfolio. Then you set a percentage for each of these stocks. You can put 
+                              20% in a SPY ETF then spread the rest in 5% or 10% in stocks you pick. You can build your portfolio any way you wish and 
+                              assign any percentage to that specific stock. You can even build multiple portfolios. Then as you invest money into a 
+                              specific portfolio, the robots will buy and sell stocks to maintain the correction ratios you picked for that 
+                              portfolio. I find that very interesting as it bridges some of the benefits of self directed investing with robo advising. 
+                              I plan to download their app and sign up later this week to test it out. I will update this section after I have some time 
+                              to test it out.
                          </p>
                         
                          <p class="top-link"><a href="#top">Top</a></p>
