--- a/investing/investing.html
+++ b/investing/investing.html
@@ -117,10 +117,10 @@
                                    <a href="fintech.html#mobilewallets">Mobile Wallets</a>
                               </li>
                               <li>
-                                   <a href="">Mobile Banking</a>
+                                   <a href="fintech.html#mobilebanking">Mobile Banking</a>
                               </li>
                               <li>
-                                   <a href="">Mobile Investing</a>
+                                   <a href="fintech.html#mobileinvesting">Mobile Investing</a>
                               </li>
                               <li>
                                    <a href="">Robo Advisors</a>
