--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                     <div class="news-updates">
                          <h3>Contributor Perspectives</h3>
                          <ul>
+                              <li><a href="investing/article.html#europe">Fintech Apps in Europe</a></li>
                               <li><a href="investing/article.html#editing">Perspective on Gene Editing</a></li>
                               <li><a href="investing/article.html#tomorrow">Future of Tomorrow Today</a></li>
                          </ul>
@@ -137,6 +138,10 @@
                          <div>
                               <h3>Website Updates</h3>
                               <p> 
+                                   <strong>3/5/2023: </strong> New Perspective Added from <a href="investing/article.html#europe">SaavyMoneyShow</a> on Fintech 
+                                   apps in Europe.
+                              </p>
+                              <p> 
                                    <strong>3/5/2023: </strong> I filled out my second section of the <a href="investing/fintech.html">Fintech</a> page
                                    with a overview of mobile banking apps.
                               </p>
@@ -151,10 +156,6 @@
                               <p> 
                                    <strong>3/3/2023: </strong> Added a new <a href="investing/topten.html">Top 10 Ideas</a> list. Feel free to check it out using the Quicklink
                                    on the homepage at the top.
-                              </p>
-                              <p> 
-                                   <strong>3/3/2023: </strong> Added some new styling to the Companies Page. I added the last updated date to the 
-                                   main page for quick reference.
                               </p>
                              
                          </div>
