--- a/investing/investing.html
+++ b/investing/investing.html
@@ -177,6 +177,12 @@
                               <li>
                                    <a href="../investing/article.html#tomorrow">Future of Tomorrow</a>
                               </li>
+                              <li>
+                                   <a href="../investing/article.html#editing">Perspective on Gene Editing</a>
+                              </li>
+                              <li>
+                                   <a href="../investing/article.html#europe">Fintech Apps in Europe</a>
+                              </li>
                              
                          </ul>
                     </section>
