--- a/index.html
+++ b/index.html
@@ -138,11 +138,15 @@
                          <div>
                               <h3>Website Updates</h3>
                               <p> 
-                                   <strong>3/5/2023: </strong> New Perspective Added from <a href="investing/article.html#europe">SaavyMoneyShow</a> on Fintech 
+                                   <strong>3/8/2023: </strong> I built out more of the Fintech page with adding <a href="investing/fintech.html#blockchain">Blockchain</a> 
+                                   section to the fintech page.
+                              </p>
+                              <p> 
+                                   <strong>3/8/2023: </strong> New Perspective Added from <a href="investing/article.html#europe">SaavyMoneyShow</a> on Fintech 
                                    apps in Europe.
                               </p>
                               <p> 
-                                   <strong>3/5/2023: </strong> I filled out my second section of the <a href="investing/fintech.html">Fintech</a> page
+                                   <strong>3/6/2023: </strong> I filled out my second section of the <a href="investing/fintech.html">Fintech</a> page
                                    with a overview of mobile banking apps.
                               </p>
                               <p> 
@@ -152,10 +156,6 @@
                               <p> 
                                    <strong>3/3/2023: </strong> I continue to build out the Investing Section by adding a new menu 
                                    and new topics like a Perspective, Top 10 Ideas and Fintech section.
-                              </p>
-                              <p> 
-                                   <strong>3/3/2023: </strong> Added a new <a href="investing/topten.html">Top 10 Ideas</a> list. Feel free to check it out using the Quicklink
-                                   on the homepage at the top.
                               </p>
                              
                          </div>
