--- a/investing/investing.html
+++ b/investing/investing.html
@@ -123,16 +123,16 @@
                                    <a href="fintech.html#mobileinvesting">Mobile Investing</a>
                               </li>
                               <li>
-                                   <a href="">Robo Advisors</a>
+                                   <a href="fintech.html#roboadvisors">Robo Advisors</a>
                               </li>
                               <li>
-                                   <a href="">Peer to Peer Lending</a>
+                                   <a href="fintech.html#peertopeer">Peer to Peer Lending</a>
                               </li>
                               <li>
-                                   <a href="">Blockchain</a>
+                                   <a href="fintech.html#blockchain">Blockchain</a>
                               </li>
                               <li>
-                                   <a href="">Crypto Currencies</a>
+                                   <a href="fintech.html#crypto">Cryptocurrencies</a>
                               </li>
                          
                          </ul>
